[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/game/maps/door.png" type="Texture" id=1]
[ext_resource path="res://content/src/game/entities/door/door.gd" type="Script" id=2]
[ext_resource path="res://content/src/game/entities/interact/interact_area.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[node name="Door" type="RigidBody2D"]
collision_layer = 8
collision_mask = 0
mode = 1
script = ExtResource( 2 )
duration = 0.0

[node name="BaseSprite" type="Sprite" parent="."]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -16, -56 )

[node name="ChromaSprite" type="Sprite" parent="."]
light_mask = 1024
material = SubResource( 1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -16, -56 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16, -4, -16, -8, -8, -12, 24, 4, 24, 8, 16, 12 )

[node name="InteractArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16
script = ExtResource( 3 )
indicator_position = Vector2( 0, -62 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractArea"]
visible = false
polygon = PoolVector2Array( -16, -52, -8, -56, 24, -40, 24, 8, 16, 12, -16, -4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="triggered" from="InteractArea" to="." method="_on_InteractArea_triggered"]
